k8s-001/k8s/frontend/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
    environment: base
