k8s-001/k8s/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
  labels:
    app: frontend-app
    tier: frontend
spec:
  type: NodePort
  selector:
    app: frontend-app
    tier: frontend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  sessionAffinity: None
